# zephyr-firmware-lab

./: .gitignore  CMakeLists.txt  README.rst  app.overlay  prj.conf  tests.yaml
docs/: descricao-tecnica.md  perguntas-e-respostas.md
include/: app_events.h  button.h  led.h  led_thread.h  logging_thread.h
src/: app_events.c  button.c  led.c  led_thread.c  logging_thread.c  main.c
